...
                        <viewControllerLayoutGuide type="bottom" id="tSC-EU-qFu"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="oz1-u4-yJs">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your Goal" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SQH-CD-bQA" customClass="DesignableTextField" customModule="Rocket_Goals" customModuleProvider="target">
                                <rect key="frame" x="20" y="49" width="339" height="83"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <color key="tintColor" red="0.27175792770000001" green="0.32097855359999999" blue="0.42118573050000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                            </textField>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Description" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="JPV-N4-fHu">
                                <rect key="frame" x="20" y="225" width="339" height="129"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="129" id="2OP-ZD-lcS"/>
                                </constraints>
                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no" spellCheckingType="no"/>
                            </textView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1qI-gy-a0S">
                                <rect key="frame" x="59" y="607" width="264" height="40"/>
                                <color key="backgroundColor" red="0.36845466490000001" green="0.66765177249999996" blue="0.35296514629999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                <state key="normal" title="Add Goal">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="addGoal:" destination="wep-fT-PQm" eventType="touchUpInside" id="YYh-Si-Ugm"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Long Term?" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BzE-KC-0Y3" customClass="DesignableTextField" customModule="Rocket_Goals" customModuleProvider="target">
                                <rect key="frame" x="20" y="155" width="339" height="39"/>
                                <color key="backgroundColor" red="1" green="0.99320426669999995" blue="0.99136276459999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="39" id="Gfi-xc-kj9"/>
                                </constraints>
                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                            <constraint firstItem="BzE-KC-0Y3" firstAttribute="top" secondItem="oz1-u4-yJs" secondAttribute="top" constant="155" id="wB8-7m-rTZ"/>
                            <constraint firstItem="1qI-gy-a0S" firstAttribute="leading" secondItem="oz1-u4-yJs" secondAttribute="leadingMargin" constant="43" id="wtu-95-Cpn"/>
                            <constraint firstItem="BzE-KC-0Y3" firstAttribute="top" secondItem="SQH-CD-bQA" secondAttribute="bottom" constant="23" id="yfR-PT-Nm7"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="ENTER GOAL" id="r4H-GZ-0xs">
                        <barButtonItem key="backBarButtonItem" title="Back" id="BgL-7M-u1q"/>
                        <barButtonItem key="rightBarButtonItem" systemItem="camera" id="R7Q-yu-flY">
                            <connections>
                                <action selector="addPic:" destination="wep-fT-PQm" id="cqe-Ts-Spm"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
